Fixed message bar text wrapping

--- a/style/main.css
+++ b/style/main.css
@@ -1,15 +1,15 @@
 .reply {
-    height: 25%;
-    width: 100%;
-    position: fixed;
+    height: 20%;
+    position: static;
     bottom: 0;
 }
 
 #thread {
-    height: calc(100% - 170px);
+    height: 80%;
     overflow-y: scroll;
     overflow-wrap: break-word;
-    padding: 20px 20px 150px 20px;
+    padding: 20px;
+    position: static;
 }
 
 #message {
@@ -121,15 +121,6 @@ body {
   margin: 0px;
 }
 
-.col-sm-2 {
-  padding: 0px;
-}
-
-.col-sm-10 {
-  margin: 0px;
-  padding: 0px;
-}
-
 input {
   -webkit-appearance: none;
   box-shadow: none !important;
@@ -189,10 +180,7 @@ input {
 /*           TEST                */
 /*-------------------------------*/
 
-body {
-    position: relative;
-    overflow-x: hidden;
-}
+
 body,
 html { height: 100%;}
 .nav .open > a,
@@ -221,7 +209,7 @@ html { height: 100%;}
     width: 0;
     height: 100%;
     margin-left: -220px;
-    overflow-y: auto;
+    overflow-y: hidden;
     overflow-x: hidden;
     background: #1a1a1a;
     -webkit-transition: all 0.5s ease;
@@ -244,8 +232,7 @@ html { height: 100%;}
 }
 
 #wrapper.toggled #page-content-wrapper {
-    position: absolute;
-    margin-right: -220px;
+    padding-right: -220px;
 }
 
 /*-------------------------------*/
@@ -277,43 +264,6 @@ html { height: 100%;}
     height: 100%;
     width: 3px;
     background-color: #1c1c1c;
-    -webkit-transition: width .2s ease-in;
-      -moz-transition:  width .2s ease-in;
-       -ms-transition:  width .2s ease-in;
-            transition: width .2s ease-in;
-
-}
-.sidebar-nav li:first-child a {
-    color: #fff;
-    background-color: #1a1a1a;
-}
-.sidebar-nav li:nth-child(2):before {
-    background-color: #ec1b5a;
-}
-.sidebar-nav li:nth-child(3):before {
-    background-color: #79aefe;
-}
-.sidebar-nav li:nth-child(4):before {
-    background-color: #314190;
-}
-.sidebar-nav li:nth-child(5):before {
-    background-color: #279636;
-}
-.sidebar-nav li:nth-child(6):before {
-    background-color: #7d5d81;
-}
-.sidebar-nav li:nth-child(7):before {
-    background-color: #ead24c;
-}
-.sidebar-nav li:nth-child(8):before {
-    background-color: #2d2366;
-}
-.sidebar-nav li:nth-child(9):before {
-    background-color: #35acdf;
-}
-.sidebar-nav li:hover:before,
-.sidebar-nav li.open:hover:before {
-    width: 100%;
     -webkit-transition: width .2s ease-in;
       -moz-transition:  width .2s ease-in;
        -ms-transition:  width .2s ease-in;
